prod/infra/external-services.yaml
# external-services.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: minio
  namespace: infra
  labels:
    kubernetes.io/service-name: minio
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.0.41
ports:
  - name: api
    port: 9000
  - name: console
    port: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: infra
spec:
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: n8n
  namespace: infra
  labels:
    kubernetes.io/service-name: n8n
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.0.41
ports:
  - name: web
    port: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: infra
spec:
  ports:
    - name: web
      port: 5678
      targetPort: 5678
