prod/infra/jenkins-service.yaml
# prod/infra/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: infra
spec:
  selector:
    app: jenkins
  ports:
    - name: web
      port: 8080
      targetPort: 8080
    - name: agent
      port: 50000
      targetPort: 50000
