prod/infra/jenkins.yaml
# prod/infra/jenkis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
  namespace: infra
spec:
  serviceName: "jenkins"
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
      spec:
        nodeSelector:
          kubernetes.io/hostname: thinkcentre
        securityContext:
          fsGroup: 1000
          runAsUser: 1000
        containers:
          - name: jenkins
            image: jenkins/jenkins:lts
            ports:
              - containerPort: 8080
              - containerPort: 50000 # agent inbound Port
            volumeMounts:
              - name: jenkins-hostname
                mountPath: /var/jenkins_home
            resources:
              requests:
                memory: "512Mi"
                cpu: "250m"
              limits:
                memory: "2Gi"
                cpus: "1"
volumeClaimTemplates:
- metadata:
    name: jenkins-onpremise
  spec:
    accessModes: ["ReadWriteOnce"]
    resources:
      requests:
        storage: 10Gi 

---

apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: infra
spec:
  selector:
    app: jenkins
  ports:
    - name: web
      port: 8080
      targetPort: 8080
    - name: agent
      port: 50000
      targetPort: 50000
