prod/infra/httproutes.yaml
# prod/infra/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-route
  namespace: infra
spec:
  parentRefs:
    - name: infra-gateway
      namespace: infra-gateway
  hostnames:
    - "minio.paulryu93.ddns.net"
  rules:
    - backendRefs:
        - name: minio
          port: 9001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-route
  namespace: infra
spec:
  parentRefs:
    - name: infra-gateway
      namespace: infra-gateway
  hostnames:
    - "n8n.paulryu93.ddns.net"
  rules:
    - backendRefs:
        - name: n8n
          port: 5678

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-route
  namespace: infra
spec:
  parentRefs:
    - name: infra-gateway
      namespace: infra-gateway
  hostnames:
    - "jenkins.paulryu93.ddns.net"
  rules:
    - backendRefs:
        - name: jenkins
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: infra
spec:
  parentRefs:
    - name: infra-gateway
      namespace: infra-gateway
  hostnames:
    - "argocd.paulryu93.ddns.net"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: infra
spec:
  parentRefs:
    - name: infra-gateway
      namespace: infra-gateway
  hostnames:
    - "grafana.paulryu93.ddns.net"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sct-route
  namespace: infra
spec:
  parentRefs:
    - name: infra-gateway
      namespace: infra-gateway
  hostnames:
    - "sct.paulryu93.ddns.net"
  rules:
    - backendRefs:
        - name: sct
          port: 8501
